plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

sourceSets {
    main {
        java {
            srcDirs = ['backend-spring/src/main/java']
        }
        resources {
            srcDirs = ['backend-spring/src/main/resources']
        }
    }
    test {
        java {
            srcDirs = ['backend-spring/src/test/java']
        }
        resources {
            srcDirs = ['backend-spring/src/test/resources']
        }
    }
}

group = 'com.jober'
version = '0.0.1-SNAPSHOT'
description = 'Final-2team-DrHong'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'
    // lettuce-core 버전을 Spring Boot가 관리하도록 제거 (Spring Boot 3.5.5는 6.4.x를 사용)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    // JWT 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

// =========================================
// 테스트 프로파일별 실행 태스크
// =========================================

// 단위테스트 실행 (H2 인메모리 DB + Mock)
task unitTest(type: Test) {
    useJUnitPlatform()
    systemProperty 'spring.profiles.active', 'test'
    include '**/service/**Test.class'
    include '**/config/**Test.class'
    exclude '**/integration/**Test.class'
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// 통합테스트 실행 (원격 MySQL RDS + Redis + Gmail SMTP)
task integrationTest(type: Test) {
    useJUnitPlatform()
    systemProperty 'spring.profiles.active', 'integration'
    include '**/integration/**Test.class'
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// Redis 폴백 테스트 실행 (RDB만 사용)
task redisFallbackTest(type: Test) {
    useJUnitPlatform()
    systemProperty 'spring.profiles.active', 'redis-fallback-test'
    include '**/integration/RedisFallbackIntegrationTest.class'
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// 모든 테스트 실행 (기본)
task allTests(type: Test) {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// 테스트 그룹 정의
task testGroup {
    group = 'verification'
    description = 'Run all test groups'
    dependsOn unitTest, integrationTest, redisFallbackTest
}
